@@ -759,6 +759,19 @@ LspNotify			See |LspNotify|
 LspProgress			See |LspProgress|
 LspRequest			See |LspRequest|
 LspTokenUpdate			See |LspTokenUpdate|
+							*MarkSet*
+MarkSet				After a |mark| is set by |m|, |:mark|, and
+				|nvim_buf_set_mark()|. Supports `[a-zA-Z]`
+				marks (may support more in the future).
+				The |autocmd-pattern| is matched against the
+				mark name (e.g. `[ab]` matches `a` or `b`, `*`
+				matches all).
+
+				The |event-data| has these keys:
+				- name: Mark name (e.g. "a")
+				- line: Mark line.
+				- col: Mark column.
+
 							*MenuPopup*
 MenuPopup			Just before showing the popup menu (under the
 				right mouse button).  Useful for adjusting the
