@@ -2535,6 +2535,7 @@ A jump table for the options with a short description can be found at |Q_op|.
 		|LspProgress|,
 		|LspRequest|,
 		|LspTokenUpdate|,
+		|MarkSet|,
 		|MenuPopup|,
 		|ModeChanged|,
 		|OptionSet|,
